# mrg-sandbox

./: .gitignore  .gitmodules  LICENSE  README.md  ruff.toml
.github/workflows/: ci.yml  publish-sandbox-image.yml
examples/sandbox/: design.py
firmware/: HARDWARE.md  README.md  build.py  pyproject.toml
firmware/base/: README.md  base.bit  design.py
firmware/src/cloud_fpga_firmware/: __init__.py  crg.py  export.py  memmap.py  platform.py  soc.py  wb_cdc.py
firmware/sw/: .gitignore  Makefile  ethernetif.c  wishbone_tcp.c
firmware/tests/unit/: test_base_design.py  test_export.py  test_memory_map.py  test_wb_cdc.py
sandbox/: Dockerfile  README.md
sandbox/mrg_build/: __init__.py  __main__.py  api.py  frontend.py  report.py  toolchain.py
sandbox/tests/: test_api.py  test_frontend.py  test_launcher.py  test_profiles.py  test_sandbox.py  test_select_clock.py  test_silicon.py  test_soc.py  test_toolchain.py
sandbox/tests/fixtures/: mac.v
